tests/rosetta/out/Fortran/99-bottles-of-beer-2.error
gfortran: exit status 1
/tmp/99-bottles-of-beer-2.f90:73:132:

   73 |     small = (/'no','one','two','three','four','five','six','seven','eight','nine','ten','eleven','twelve','thirteen','fourteen','fifteen','sixteen','seventeen','eighteen','nineteen'/)
      |                                                                                                                                    1
Error: Line truncated at (1) [-Werror=line-truncation]
/tmp/99-bottles-of-beer-2.f90:73:130:

   73 |     small = (/'no','one','two','three','four','five','six','seven','eight','nine','ten','eleven','twelve','thirteen','fourteen','fifteen','sixteen','seventeen','eighteen','nineteen'/)
      |                                                                                                                                  1
Error: Unterminated character constant beginning at (1)
/tmp/99-bottles-of-beer-2.f90:159:132:

  159 |       print *, trim(trim(trim(slur(numberName(i),i) // ' ') // pluralizeFirst(slur('bottle of',i),i)) // ' ') // slur('beer on the wall',i)
      |                                                                                                                                    1
Error: Line truncated at (1) [-Werror=line-truncation]
/tmp/99-bottles-of-beer-2.f90:159:120:

  159 |       print *, trim(trim(trim(slur(numberName(i),i) // ' ') // pluralizeFirst(slur('bottle of',i),i)) // ' ') // slur('beer on the wall',i)
      |                                                                                                                        1
Error: Unterminated character constant beginning at (1)
/tmp/99-bottles-of-beer-2.f90:162:132:

  162 |       print *, trim(trim(trim(slur(numberName((i - 1)),i) // ' ') // pluralizeFirst(slur('bottle of',i),(i - 1))) // ' ') // slur('beer on the wall',i)
      |                                                                                                                                    1
Error: Line truncated at (1) [-Werror=line-truncation]
/tmp/99-bottles-of-beer-2.f90:162:132:

  162 |       print *, trim(trim(trim(slur(numberName((i - 1)),i) // ' ') // pluralizeFirst(slur('bottle of',i),(i - 1))) // ' ') // slur('beer on the wall',i)
      |                                                                                                                                    1
Error: Unterminated character constant beginning at (1)
/tmp/99-bottles-of-beer-2.f90:145:5:

  145 |     s = p(0+1:1)
      |     1
Error: Symbol ‘s’ at (1) has no IMPLICIT type
/tmp/99-bottles-of-beer-2.f90:134:8:

  134 |     seed = d
      |        1
Error: Symbol ‘seed’ at (1) has no IMPLICIT type
/tmp/99-bottles-of-beer-2.f90:85:7:

   85 |       s = mod(n,10)
      |       1
Error: Symbol ‘s’ at (1) has no IMPLICIT type
/tmp/99-bottles-of-beer-2.f90:56:47:

   56 |   recursive character(len=100) function join(xs,sep) result(res)
      |                                               1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘xs’ at (1)
/tmp/99-bottles-of-beer-2.f90:160:118:

  160 |       print *, trim(trim(trim(slur(numberName(i),i) // ' ') // pluralizeFirst(slur('bottle of',i),i)) // ' ') // slur('beer',i)
      |                                                                                                                      1
Warning: Character length of actual argument shorter than of dummy argument ‘p’ (4/100) at (1)
/tmp/99-bottles-of-beer-2.f90:119:14:

  119 |     if ((size(p) <= 2)) then
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/99-bottles-of-beer-2.f90:129:24:

  129 |       app2(size(a)+1) = p(i+1:(i + 1))
      |                        1
Error: Cannot convert CHARACTER(*) to INTEGER(4) at (1)
/tmp/99-bottles-of-beer-2.f90:125:25:

  125 |     do while (((i < size(p)) - 1))
      |                         1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/99-bottles-of-beer-2.f90:151:21:

  151 |     s = (s + p((size(p) - 1)+1:size(p)))
      |                     1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/99-bottles-of-beer-2.f90:153:15:

  153 |     res = join(w,' ')
      |               1
Error: Expected a procedure for argument ‘xs’ at (1)
/tmp/99-bottles-of-beer-2.f90:153:17:

  153 |     res = join(w,' ')
      |                 1
Warning: Character length of actual argument shorter than of dummy argument ‘sep’ (1/100) at (1)
/tmp/99-bottles-of-beer-2.f90:63:15:

   63 |         res = (res + sep)
      |               1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/99-bottles-of-beer-2.f90:65:13:

   65 |       res = (res + xs(((i)+1)))
      |             1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/INTEGER(4)
/tmp/99-bottles-of-beer-2.f90:61:24:

   61 |     do while ((i < size(xs)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/99-bottles-of-beer-2.f90:160:83:

  160 |       print *, trim(trim(trim(slur(numberName(i),i) // ' ') // pluralizeFirst(slur('bottle of',i),i)) // ' ') // slur('beer',i)
      |                                                                                   1
Warning: Character length of actual argument shorter than of dummy argument ‘p’ (9/100) at (1)
/tmp/99-bottles-of-beer-2.f90:31:11:

   31 |       ch = s(i+1:(i + 1))
      |           1
Error: Cannot convert CHARACTER(*) to INTEGER(4) at (1)
/tmp/99-bottles-of-beer-2.f90:32:15:

   32 |       if ((((((ch == ' ') .or. ch) == ''//char(10)//'') .or. ch) == '   ')) then
      |               1
Error: Operands of comparison operator ‘==’ at (1) are INTEGER(4)/CHARACTER(1)
/tmp/99-bottles-of-beer-2.f90:37:32:

   37 |           app0(size(words)+1) = cur
      |                                1
Error: Cannot convert CHARACTER(100) to INTEGER(4) at (1)
/tmp/99-bottles-of-beer-2.f90:42:15:

   42 |         cur = (cur + ch)
      |               1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/INTEGER(4)
/tmp/99-bottles-of-beer-2.f90:30:24:

   30 |     do while ((i < size(s)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/99-bottles-of-beer-2.f90:46:14:

   46 |     if ((size(cur) > 0)) then
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/99-bottles-of-beer-2.f90:50:28:

   50 |       app1(size(words)+1) = cur
      |                            1
Error: Cannot convert CHARACTER(100) to INTEGER(4) at (1)
/tmp/99-bottles-of-beer-2.f90:53:4:

   53 |     res = words
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/99-bottles-of-beer-2.f90:103:14:

  103 |     if ((size(w) > 0)) then
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/99-bottles-of-beer-2.f90:106:15:

  106 |     res = join(w,' ')
      |               1
Error: Expected a procedure for argument ‘xs’ at (1)
/tmp/99-bottles-of-beer-2.f90:106:17:

  106 |     res = join(w,' ')
      |                 1
Warning: Character length of actual argument shorter than of dummy argument ‘sep’ (1/100) at (1)
/tmp/99-bottles-of-beer-2.f90:74:20:

   74 |     tens = (/'ones','ten','twenty','thirty','forty','fifty','sixty','seventy','eighty','ninety'/)
      |                    1
Error: Different CHARACTER lengths (4/3) in array constructor at (1)
/tmp/99-bottles-of-beer-2.f90:80:12:

   80 |       res = small(((n)+1))
      |            1
Error: Cannot convert INTEGER(4) to CHARACTER(100) at (1)
/tmp/99-bottles-of-beer-2.f90:87:17:

   87 |         t = trim(t // ' ') // small(((s)+1))
      |                 1
Error: Operands of string concatenation operator at (1) are INTEGER(4)/CHARACTER(1)
/tmp/99-bottles-of-beer-2.f90:89:12:

   89 |       res = t
      |            1
Error: Cannot convert INTEGER(4) to CHARACTER(100) at (1)
/tmp/99-bottles-of-beer-2.f90:161:92:

  161 |       print *, trim(trim(trim(slur('take one',i) // ' ') // slur('down',i)) // ' ') // slur('pass it around',i)
      |                                                                                            1
Warning: Character length of actual argument shorter than of dummy argument ‘p’ (14/100) at (1)
/tmp/99-bottles-of-beer-2.f90:161:65:

  161 |       print *, trim(trim(trim(slur('take one',i) // ' ') // slur('down',i)) // ' ') // slur('pass it around',i)
      |                                                                 1
Warning: Character length of actual argument shorter than of dummy argument ‘p’ (4/100) at (1)
/tmp/99-bottles-of-beer-2.f90:161:35:

  161 |       print *, trim(trim(trim(slur('take one',i) // ' ') // slur('down',i)) // ' ') // slur('pass it around',i)
      |                                   1
Warning: Character length of actual argument shorter than of dummy argument ‘p’ (8/100) at (1)
f951: some warnings being treated as errors
