tests/rosetta/out/Fortran/99-bottles-of-beer-2.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program p_99_bottles_of_beer_2
  implicit none
    integer, allocatable, dimension(:) :: words
    character(len=100) :: cur
    integer :: i
      integer :: ch
          integer, allocatable, dimension(:) :: app0
      integer, allocatable, dimension(:) :: app1
    character(len=100) :: res
    integer, dimension(20) :: small
    integer, dimension(10) :: tens
      integer :: t
    integer :: w
    integer :: next
    integer, allocatable, dimension(:) :: a
    integer :: idx
    integer :: k
      integer, allocatable, dimension(:) :: app2
        integer :: j
        integer :: tmp
  call main()
  
  contains
  recursive integer function fields(s) result(res)
    character(len=100), intent(in) :: s
    allocate(words(0))
    cur = ''
    i = 0
    do while ((i < size(s)))
      ch = s(i+1:(i + 1))
      if ((((((ch == ' ') .or. ch) == ''//char(10)//'') .or. ch) == '	')) then
        if ((0 > 0)) then
          if (allocated(app0)) deallocate(app0)
          allocate(app0(size(words)+1))
          app0(1:size(words)) = words
          app0(size(words)+1) = cur
          words = app0
          cur = ''
        end if
      else
        cur = (cur + ch)
      end if
      i = (i + 1)
    end do
    if ((size(cur) > 0)) then
      if (allocated(app1)) deallocate(app1)
      allocate(app1(size(words)+1))
      app1(1:size(words)) = words
      app1(size(words)+1) = cur
      words = app1
    end if
    res = words
    return
  end function fields
  recursive character(len=100) function join(xs,sep) result(res)
    integer, intent(in) :: xs
    character(len=100), intent(in) :: sep
    res = ''
    i = 0
    do while ((i < size(xs)))
      if ((i > 0)) then
        res = (res + sep)
      end if
      res = (res + xs(((i)+1)))
      i = (i + 1)
    end do
    res = res
    return
  end function join
  recursive character(len=100) function numberName(n) result(res)
    integer, intent(in) :: n
    small = (/'no','one','two','three','four','five','six','seven','eight','nine','ten','eleven','twelve','thirteen','fourteen','fifteen','sixteen','seventeen','eighteen','nineteen'/)
    tens = (/'ones','ten','twenty','thirty','forty','fifty','sixty','seventy','eighty','ninety'/)
    if ((n < 0)) then
      res = ''
      return
    end if
    if ((n < 20)) then
      res = small(((n)+1))
      return
    end if
    if ((n < 100)) then
      t = tens(((int(((n / 10))))+1))
      s = mod(n,10)
      if ((s > 0)) then
        t = trim(t // ' ') // small(((s)+1))
      end if
      res = t
      return
    end if
    res = ''
    return
  end function numberName
  recursive character(len=100) function pluralizeFirst(s,n) result(res)
    character(len=100), intent(in) :: s
    integer, intent(in) :: n
    if ((n == 1)) then
      res = s
      return
    end if
    w = fields(s)
    if ((size(w) > 0)) then
      w(((0)+1)) = w(((0)+1)) // 's'
    end if
    res = join(w,' ')
    return
  end function pluralizeFirst
  recursive integer function randInt(seed,n) result(res)
    integer, intent(in) :: seed
    integer, intent(in) :: n
    next = mod((((seed * 1664525) + 1013904223)),2147483647)
    res = mod(next,n)
    return
  end function randInt
  recursive character(len=100) function slur(p,d) result(res)
    character(len=100), intent(in) :: p
    integer, intent(in) :: d
    if ((size(p) <= 2)) then
      res = p
      return
    end if
    allocate(a(0))
    i = 1
    do while (((i < size(p)) - 1))
      if (allocated(app2)) deallocate(app2)
      allocate(app2(size(a)+1))
      app2(1:size(a)) = a
      app2(size(a)+1) = p(i+1:(i + 1))
      a = app2
      i = (i + 1)
    end do
    idx = (size(a) - 1)
    seed = d
    do while ((idx >= 1))
      seed = mod((((seed * 1664525) + 1013904223)),2147483647)
      if ((mod(seed,100) >= d)) then
        j = mod(seed,((idx + 1)))
        tmp = a(((idx)+1))
        a(((idx)+1)) = a(((j)+1))
        a(((j)+1)) = tmp
      end if
      idx = (idx - 1)
    end do
    s = p(0+1:1)
    k = 0
    do while ((k < size(a)))
      s = (s + a(((k)+1)))
      k = (k + 1)
    end do
    s = (s + p((size(p) - 1)+1:size(p)))
    w = fields(s)
    res = join(w,' ')
    return
  end function slur
  recursive subroutine main()
    i = 99
    do while ((i > 0))
      print *, trim(trim(trim(slur(numberName(i),i) // ' ') // pluralizeFirst(slur('bottle of',i),i)) // ' ') // slur('beer on the wall',i)
      print *, trim(trim(trim(slur(numberName(i),i) // ' ') // pluralizeFirst(slur('bottle of',i),i)) // ' ') // slur('beer',i)
      print *, trim(trim(trim(slur('take one',i) // ' ') // slur('down',i)) // ' ') // slur('pass it around',i)
      print *, trim(trim(trim(slur(numberName((i - 1)),i) // ' ') // pluralizeFirst(slur('bottle of',i),(i - 1))) // ' ') // slur('beer on the wall',i)
      i = (i - 1)
    end do
  end subroutine main
end program p_99_bottles_of_beer_2
